Added iPhone Icon
Added Icon and description of the team.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello! This is how we made ProKno!</p>
+        
+
+
+    <div class="center">
+        <h1>Hello! This is how we made ProKno.</h1>
+    </div> 
+
+
+
+    <div class="center">
+        <p>ProKno is a group project made of 4 MICA Graphic Design Students. The goal of the course was to brand a business or service. Each of us had an interest in doing a digtal project at the start of the semester and we ended up forming a group who's goal was to help others learn the skills that they and we need for our future careers as graphic designers.</p>
+    </div>
+
+
+
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
