--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
 
 
 
+        <!-- webfont loader -->
+        <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
+        <script>
+         WebFont.load({
+            google: {
+            families: ['Open Sans']
+                }
+            });
+        </script>
+
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
