--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <script>
          WebFont.load({
             google: {
-            families: ['Open Sans']
+            families: ['OpenSans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800']
                 }
             });
         </script>
