--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div class="center">
-        <h1>Hello! This is how we made ProKno.</h1>
+        <h1>Hello! This is how we made <a href ="page/page.html">ProKno</a></h1>
     </div> 
 
 
